--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 <div>
     <p>Redes</p>
     <p>Datos de contacto</p>
+    <p>Datos de contacto</p>
+    <p>Datos de contacto</p>
 </div>
 </footer>
     
