--- a/index.html
+++ b/index.html
@@ -181,10 +181,13 @@
         <h4>Cris</h4>
         <div class="contenedormi">
             <img src="./assets/image/cristian.JPG" alt="foto artista" class="cris" id="cris1">
-            <img src="./assets/image/cristian2.JPG" alt="foto artista2" class="cris"id="cris2">
-            <p class="cris" id="pmi1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>
-            <p class="cris" id="pmi2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>
+            <p id="pmi1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>       
         </div>
+        <h4>statement</h4>
+        <div class="contenedorinte">   
+            <img src="./assets/image/cristian2.JPG" alt="foto artista2" class="cris"id="cris2">
+            <p class="crisp" id="pmi2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>
+        </div> 
     </section>
     <!-- termina sección sobre mi -->
 </main>
