--- a/index.html
+++ b/index.html
@@ -186,10 +186,43 @@
         <h4>statement</h4>
         <div class="contenedorinte">   
             <img src="./assets/image/cristian2.JPG" alt="foto artista2" class="cris"id="cris2">
-            <p class="crisp" id="pmi2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>
+            <p id="pmi2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>
         </div> 
     </section>
     <!-- termina sección sobre mi -->
+    <!-- inicia fotografía -->
+    <h4>Fotografía</h4>
+    <section>
+      <div class="foto">
+  
+        <ul class="slider">
+          <li id="slide1">
+            <img src="./assets/image/jne1.JPG" alt="foto1" class="jne">
+          </li>
+          <li id="slide2">
+            <img src="./assets/image/jne2.JPG" alt="foto2" class="jne">
+          </li>
+          <li id="slide3">
+            <img src="./assets/image/jne3.JPG" alt="foto3" class="jne">
+          </li>
+        </ul>
+        
+        <ul class="menu">
+          <li>
+            <a href="#slide1">1</a>
+          </li>
+          <li>
+            <a href="#slide2">2</a>
+          </li>
+           <li>
+            <a href="#slide3">3</a>
+          </li>
+        </ul>
+        
+      </div>
+
+    </section>
+    <!-- termina fotografía -->
 </main>
 <!-- Termina main -->
 
