--- a/index.html
+++ b/index.html
@@ -208,15 +208,17 @@
         </ul>
         
         <ul class="menu">
-          <li>
-            <a href="#slide1">1</a>
-          </li>
-          <li>
-            <a href="#slide2">2</a>
-          </li>
-           <li>
-            <a href="#slide3">3</a>
-          </li>
+          <div class="b3">
+            <li>
+              <a href="#slide1" id="bo1">1</a>
+            </li>
+            <li>
+              <a href="#slide2" id="bo2">2</a>
+            </li>
+            <li>
+              <a href="#slide3" id="bo3">3</a>
+            </li>
+          </div>
         </ul>
         
       </div>
