--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             <img src="./assets/image/cristian.JPG" alt="foto artista" class="cris" id="cris1">
             <p id="pmi1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>       
         </div>
+        <!-- statement -->
         <h4>statement</h4>
         <div class="contenedorinte">   
             <img src="./assets/image/cristian2.JPG" alt="foto artista2" class="cris"id="cris2">
@@ -191,8 +192,20 @@
     </section>
     <!-- termina sección sobre mi -->
     <!-- inicia fotografía -->
-    <h4>Fotografía</h4>
-    <section>
+     <section>
+      <h4>Fotografía</h4>
+      <div class="slider">
+        <ul>
+          <li><img src="./assets/image/jne1.JPG" alt="" class="jne"></li>
+          <li><img src="./assets/image/jne2.JPG" alt="" class="jne"></li>
+          <li><img src="./assets/image/jne3.JPG" alt="" class="jne"></li>
+
+        </ul>
+
+      </div>
+
+    </section>
+  <!--   <section>
       <div class="foto">
   
         <ul class="slider">
@@ -223,7 +236,7 @@
         
       </div>
 
-    </section>
+    </section> -->
     <!-- termina fotografía -->
 </main>
 <!-- Termina main -->
