--- a/index.html
+++ b/index.html
@@ -178,24 +178,21 @@
     </section>
     <!-- inicia sección sobre mi -->
     <section>
-        <h4>Cris</h4>
-        <div class="contenedormi">
-            <img src="./assets/image/cristian.JPG" alt="foto artista" class="cris" id="cris1">
-            <p id="pmi1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>       
-        </div>
         <!-- statement -->
         <h4>statement</h4>
         <div class="contenedorinte">   
+
             <img src="./assets/image/cristian2.JPG" alt="foto artista2" class="cris"id="cris2">
-            <p id="pmi2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae minus ipsa earum provident, ea quos rerum voluptate? Odio, corporis delectus.</p>
-        </div> 
+            <p id="pmi2">Mi trabajo se desborda gracias a la pregunta generada por los procesos, que contiene o son consecuencia, del acto de cotidianizar (cuando generamos relaciones con nuestro entorno para hacerlo familiar), tales como la naturalización y la sincronización; todos estos procesos vinculados con un objetivo común: inhibir el caos.</p>
+
+          </div> 
     </section>
     <!-- termina sección sobre mi -->
     <!-- inicia fotografía -->
      <section>
       <h4>Fotografía</h4>
       <div class="slider">
-        <ul>
+        <ul class="foto">
           <li><img src="./assets/image/jne1.JPG" alt="" class="jne"></li>
           <li><img src="./assets/image/jne2.JPG" alt="" class="jne"></li>
           <li><img src="./assets/image/jne3.JPG" alt="" class="jne"></li>
@@ -205,38 +202,7 @@
       </div>
 
     </section>
-  <!--   <section>
-      <div class="foto">
-  
-        <ul class="slider">
-          <li id="slide1">
-            <img src="./assets/image/jne1.JPG" alt="foto1" class="jne">
-          </li>
-          <li id="slide2">
-            <img src="./assets/image/jne2.JPG" alt="foto2" class="jne">
-          </li>
-          <li id="slide3">
-            <img src="./assets/image/jne3.JPG" alt="foto3" class="jne">
-          </li>
-        </ul>
-        
-        <ul class="menu">
-          <div class="b3">
-            <li>
-              <a href="#slide1" id="bo1">1</a>
-            </li>
-            <li>
-              <a href="#slide2" id="bo2">2</a>
-            </li>
-            <li>
-              <a href="#slide3" id="bo3">3</a>
-            </li>
-          </div>
-        </ul>
-        
-      </div>
 
-    </section> -->
     <!-- termina fotografía -->
 </main>
 <!-- Termina main -->
