--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://calart.netlify.app">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#fotos">Exhibición</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="#statement">Statement</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Fotografíasection">Fotografía</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contacto</a>
+              </li>
+<!--               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
                 </a>
@@ -40,10 +49,10 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
+              </li> -->
+<!--               <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
-              </li>
+              </li> -->
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -171,9 +180,9 @@
         </div>
     </section>
     <!-- inicia sección sobre mi -->
-    <section>
+    <section id="statement">
         <!-- statement -->
-        <h4>statement</h4>
+        <h4>Statement</h4>
         <div class="contenedorinte"> 
           <img src="./assets/image/cristian2.JPG" alt="foto artista2" class="cris"id="cris2">
           <p id="pmi2">Mi trabajo se desborda gracias a la pregunta generada por los procesos, que contiene o son consecuencia, del acto de cotidianizar (cuando generamos relaciones con nuestro entorno para hacerlo familiar), tales como la naturalización y la sincronización; todos estos procesos vinculados con un objetivo común: inhibir el caos.</p>
@@ -182,7 +191,7 @@
     </section>
     <!-- Statement-->
     <!-- inicia fotografía -->
-     <section>
+     <section id="Fotografíasection">
       <h4 id="hfoto">Fotografía</h4>
       <div class="slider">
         <ul class="foto">
@@ -202,20 +211,29 @@
 
 
 <footer>
-<div>
-    <p>Acá va el Footer</p>
+  <section id="contacto">
 
-</div>
+    <div class="contactocontenedor">
+      <h2 class="titulocontanto">Contactame</h2> 
+    </div>
+
+    <div class="redes">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-youtube"></i>
+    </div>
+  </section>
 </footer>
+
     
     
 
 
 
 
-
-
-
+<!-- script de fontawesome -->
+    <script src="https://kit.fontawesome.com/5c94c8aeb7.js" crossorigin="anonymous"></script>
+<!-- script de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
